# seekdb

./: .4_ce  .akconfig  .akfarm  .akperformancetest  .aone.yml  .gitignore  .gitlab_test.yaml  .secignore  .secignore.opensource  CLOSE_SOURCES  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  README_CN.md  build.ps1  build.sh  strip2ce
close_modules/: CMakeLists.txt
close_modules/arbitration/logservice/: ob_arbitration_service.cpp  ob_arbitration_service.h
close_modules/arbitration/rootserver/: ob_arbitration_service.cpp  ob_arbitration_service.h
close_modules/license/share/: ob_license.h  ob_license_mgr.cpp  ob_license_mgr.h  ob_license_pub_key.h  ob_license_timestamp_service.cpp  ob_license_timestamp_service.h  ob_license_utils.cpp
close_modules/log_storage_compress/logservice/: ob_log_compression.cpp  ob_log_compression.h
close_modules/shared_storage/log/: ob_file_upload_mgr.cpp  ob_file_upload_mgr.h  ob_log_fast_rebuild_engine.cpp  ob_log_fast_rebuild_engine.h  ob_log_iterator_storage.cpp  ob_log_iterator_storage.h  ob_log_rebuild_cb_adapter.cpp  ob_log_rebuild_cb_adapter.h  ob_shared_log_garbage_collector.cpp  ob_shared_log_garbage_collector.h  ob_shared_log_interface.cpp  ob_shared_log_interface.h  ob_shared_log_service.cpp  ob_shared_log_service.h  ob_shared_log_upload_handler.cpp  ob_shared_log_upload_handler.h  ob_shared_log_utils.cpp  ob_shared_log_utils.h
close_modules/shared_storage/meta_store/: ob_shared_storage_obj_meta.cpp  ob_shared_storage_obj_meta.h
close_modules/shared_storage/rootserver/: ob_ls_merge_progress_checker.cpp  ob_ls_merge_progress_checker.h
close_modules/shared_storage/share/: ob_ptr_handle.h  ob_ss_file_util.cpp  ob_ss_file_util.h  ob_ss_io_device_wrapper.cpp  ob_ss_io_device_wrapper.h
sensitive_test/: CMakeLists.txt
sensitive_test/logservice/: CMakeLists.txt  oss_unitest_common.h  test_log_oss.cpp  test_shared_log_utils_oss.cpp
sensitive_test/object_storage/: CMakeLists.txt  object_storage_authorization_info.h  test_assume_role.cpp  test_backup_io_adapter.cpp  test_common_storage.cpp  test_common_storage.h  test_common_storage_util.h  test_ob_admin.cpp  test_object_storage.cpp  test_object_storage.h  test_object_storage_list_azblob.cpp  test_object_storage_list_base.cpp  test_object_storage_list_cos.cpp  test_object_storage_list_gcs.cpp  test_object_storage_list_nfs.cpp  test_object_storage_list_obs.cpp  test_object_storage_list_oss.cpp  test_object_storage_list_s3.cpp  test_storage_info.cpp
sensitive_test/shared_storage/: CMakeLists.txt
sensitive_test/shared_storage/unfarm/: CMakeLists.txt  local_cache_unitest_set  test_shared_storage_gc.cpp  test_ss_local_cache.cpp  test_ss_local_cache_op.h  test_ss_local_cache_struct.h  test_ss_local_cache_util.h  test_ss_micro_cache_hit_rate.cpp  test_ss_persist_perf.cpp  test_ss_reorganize_perf.cpp
src/diagnose/lua/: CMakeLists.txt  ob_lua_api.cpp  ob_lua_handler.cpp  ob_lua_handler_win.h
src/objit/: CMakeLists.txt
src/objit/src/: CMakeLists.txt  ob_llvm_helper.cpp  ob_llvm_helper_stub.cpp
src/observer/embed/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt
test/benchmarks/common/: CMakeLists.txt  perf_kv_storecache.cpp
test/benchmarks/lib/: CMakeLists.txt  perf_bf_cache.cpp  perf_io_manager.cpp
tools/ob_admin/: CMakeLists.txt  main.cpp  ob_admin_executor.cpp
tools/ob_admin/backup_tool/: ob_admin_dump_backup_data_executor.cpp  ob_admin_dump_backup_data_executor.h
tools/ob_admin/dumpsst/: ob_admin_cmp_micro_executor.cpp  ob_admin_dumpsst_executor.cpp  ob_admin_dumpsst_executor.h
tools/ob_admin/io_bench/: ob_admin_io_executor.h
tools/ob_admin/io_device/: ob_admin_test_object_storage_interface.cpp
tools/ob_admin/log_tool/: ob_admin_log_tool_executor.cpp
tools/ob_admin/object_storage_driver_quality/: ob_admin_object_storage_driver_quality.cpp  ob_admin_object_storage_driver_quality_task_handler.cpp
tools/ob_admin/server_tool/: ob_admin_routine.cpp
tools/ob_bench/: CMakeLists.txt  ob_bench.cpp
unittest/: CMakeLists.txt  all_tests_main.cpp
unittest/archive/: test_archive_overwrite.cpp
unittest/data_dictionary/: data_dict_test_utils.h
unittest/lib/: test_ob_linear_hash_map.cpp
unittest/libobcdc/: test_ob_concurrent_seq_queue.cpp  test_small_arena.cpp
unittest/logservice/: CMakeLists.txt  test_arb_gc_utils.cpp  test_log_cache.cpp  test_log_config_mgr.cpp  test_log_external_storage_handler.cpp  test_log_io_utils.cpp  test_log_sliding_window.cpp  test_log_state_mgr.cpp  test_net_standby_restore_source.cpp  test_ob_election_message_compat2.cpp  test_server_log_block_mgr.cpp
unittest/logservice/mock_logservice_container/: mock_log_engine.h  mock_log_sliding_window.h
unittest/observer/: CMakeLists.txt  test_uniq_task_queue.cpp
unittest/observer/mysql/: test_session_track_sys_var.cpp
unittest/observer/rpc/: CMakeLists.txt
unittest/pl/: test_mock_pl_stmt.cpp
unittest/pub/: mock_server.h
unittest/rootserver/: CMakeLists.txt  fake_zone_manager.h  fake_zone_merge_manager.cpp  ob_rs_test_utils.h  test_ddl_operator.cpp  test_max_id_cache_unittest.cpp  test_multi_cluster_manager.cpp  test_primary_ls_service.cpp  test_tenant_all_zone_merge_strategy.cpp
unittest/share/: CMakeLists.txt  test_cluster_version.cpp  test_dml_sql_splicer_batch.cpp  test_geo_3d.cpp  test_geo_bin.cpp  test_geo_func_difference.cpp  test_geo_func_union.cpp  test_json_base.cpp  test_json_bin.cpp  test_json_tree.cpp  test_storage_device_manager.cpp  test_storage_file.cpp  test_storage_oss_adapter.cpp
unittest/sql/: CMakeLists.txt  test_sql_utils.cpp
unittest/storage/: CMakeLists.txt  copy_ls_info_tool.cpp  init_basic_struct.h  mock_ob_log_handler.h  mock_ob_tenant_storage.h  test_create_tablet_memtable.cpp  test_dml_common.h  test_external_sort_bug_6588390.cpp  test_hash_performance.cpp  test_io_manager.cpp  test_ob_storage_grpc.cpp  test_parallel_external_sort.cpp  test_parallel_minor_dag.cpp  test_partition_range_splite.cpp  test_partition_range_spliter.cpp  test_tablet_pointer_map.cpp  test_tenant_compaction_mem_pool.cpp  test_tenant_tablet_stat_mgr.cpp
(+26665 files in other folders)
