function(sensitive_unittest case)
  if(ARGC EQUAL 1)
    add_executable(${case} ${case}.cpp)
  else()
    add_executable(${ARGV})
  endif()
  if (case MATCHES "^test_.*")
    add_test(${case} ${case})
    set_tests_properties(${case} PROPERTIES TIMEOUT 300)
  endif()
  target_link_libraries(${case} PRIVATE -Wl,--whole-archive mock_di -Wl,--no-whole-archive oceanbase gtest gmock -static-libstdc++)
  target_include_directories(${case}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/unittest ${CMAKE_SOURCE_DIR}/deps/oblib/unittest ${CMAKE_SOURCE_DIR}/sensitive_test)
endfunction()

file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.test")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.sql")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.result")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.schema")

add_subdirectory(logservice)
add_subdirectory(shared_storage)
if (BUILD_CDC_ONLY)
  add_subdirectory(object_storage EXCLUDE_FROM_ALL)
else()
  add_subdirectory(object_storage)
endif()